Bug 920246: Adding category filter to admin/groups/groups.php
- Like the group/index.php page with the filter, this page also
  has a problem with the button when the width of screen is too small
- Added a parameter to an existing helper function for groupcategory
  (build_group_list_html
- Helper function group_get_extended_data(..) to htdocs/lib/group.php
- Fix previous bug failure due to button class change for submit
- Styling for table changed to to "break-word" to stop truncating words
- overflow of buttons controlled + responsive results heading+footer
- button moved to first level of form to stop button cutting button on
  small screen
behatnotneeded

--- a/htdocs/theme/raw/sass/layout/_layout.scss
+++ b/htdocs/theme/raw/sass/layout/_layout.scss
@@ -127,6 +127,7 @@ iframe {
 .view-container {
     margin-top: 15px;
     clear: both;
+    overflow-x: auto;
 }
 
 .view-description {
