--- a/htdocs/theme/raw/sass/typography/_tables.scss
+++ b/htdocs/theme/raw/sass/typography/_tables.scss
@@ -292,7 +292,7 @@ table.table tr {
 .table>thead>tr>th.groupname,
 .table>thead>tr>th.groupshortname,
 .table>thead>tr>th.groupmanagebuttons {
-    width: 15%;
+    width: 8em;
 }
 
 .table.profile-info {
